--- a/styles/common.css
+++ b/styles/common.css
@@ -122,6 +122,10 @@ div[id^="detalles"] > table > tbody > tr > td {
     z-index:99;
     background-color:rgba(0,0,0,0.3);
 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+
     transition: opacity 250ms;
     -moz-transition: opacity, 250ms;
     -webkit-transition: opacity 250ms; 
