--- a/styles/common.css
+++ b/styles/common.css
@@ -5,7 +5,8 @@
     display: none;
     margin:0;
     font-size: 12px;
-    padding: 5px;    
+    padding: 5px;  
+    margin: 10px;
 }
 
 .dialog .value{
@@ -75,8 +76,8 @@ div[id^="detalles"] > table > tbody > tr > td {
     overflow: hidden;
     padding: 0 !important;
 
-    width: 100%; 
-    height: 100%;
+    /*width: 100%;*/ 
+    /*height: 100%;*/
 }
 
 .ui-dialog-titlebar {
