--- a/styles/common.css
+++ b/styles/common.css
@@ -632,7 +632,7 @@ dif{
     /*color: rgba(255,255,255,0.5);*/
     color: gold;
     position:absolute;
-    left:20px;
+    /*left:20px;*/
     /*top:6px;*/
 }
 
