--- a/styles/common.css
+++ b/styles/common.css
@@ -1394,11 +1394,11 @@ dif{
     position: relative;
     overflow: hidden;
 
-    position: absolute;
+/*    position: absolute;
     top:0;
     bottom: 0;
     left: 0;
-    right: 0;
+    right: 0;*/
 
     -moz-box-shadow: inset 10px 10px 50px rgba(0,0,0,.5),inset -10px 10px 50px rgba(0,0,0,.5),inset 10px -10px 50px rgba(0,0,0,.5),inset -10px -10px 50px rgba(0,0,0,.5);
     -webkit-box-shadow: inset 10px 10px 50px rgba(0,0,0,.5),inset -10px 10px 50px rgba(0,0,0,.5),inset 10px -10px 50px rgba(0,0,0,.5),inset -10px -10px 50px rgba(0,0,0,.5);
